refactor doSplitTest method
Signed-off-by: Samir Romdhani <samir.romdhani_externe@rte-france.com>